add layertree markup for design

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/layer_tree.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/layer_tree.html.twig
@@ -2,7 +2,12 @@
     <div class="left">
         {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"Draggable"|trans}}</label>
     </div>
-    {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
+    <div class="left">
+        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
+    </div>
+    <div class="left">
+        {{ form_widget(form.configuration.useAccordion) }}<label for="{{form.configuration.useAccordion.vars.id}}" class="labelCheck">{{"Use accordion"|trans}}</label>
+    </div>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
@@ -12,23 +17,6 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.displaytype) }}{{ form_widget(form.configuration.displaytype) }}
     <div class="clearContainer"></div>
-
-    {{form_rest(form)}}
-    
-{#    
-    {{ form_label(form.configuration.components) }}{{ form_widget(form.configuration.components) }}
+    {{ form_label(form.configuration.titlemaxlength) }}{{ form_widget(form.configuration.titlemaxlength) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.stepSize) }}{{ form_widget(form.configuration.stepSize) }}
-    <div class="clearContainer"></div>
-    {{ form_label(form.configuration.stepByPixel) }}{{ form_widget(form.configuration.stepByPixel) }}
-    <div class="clearContainer"></div>
-    {{ form_label(form.configuration.anchor) }}{{ form_widget(form.configuration.anchor) }}
-    <div class="clearContainer"></div>
-    <label class="labelInput">{{"Position"|trans}}</label>
-    <div class="singleRow">
-        {{form_label(form.configuration.position.0)}}
-        {{form_widget(form.configuration.position.0)}}
-        {{form_label(form.configuration.position.1)}}
-        {{form_widget(form.configuration.position.1)}}
-    </div>#}
 </div>
