--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -26,7 +26,7 @@
                   <input class="checkbox" type="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                 </div>
                 <span class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
-                <span class="iconRemove" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
+                <span class="iconRemove" title="{{ element.title }}" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
               </td>
             </tr>
           {% endfor %}
