--- a/src/Mapbender/ManagerBundle/Resources/views/Element/legend.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/legend.html.twig
@@ -15,12 +15,12 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.noLegend) }}{{ form_widget(form.configuration.noLegend) }}
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.generateGetLegendGraphicUrl) }}<label for="{{form.configuration.generateGetLegendGraphicUrl.vars.id}}" class="labelCheck">{{"Generate get legend graphic url"|trans}}</label>
+    {{ form_widget(form.configuration.generateLegendGraphicUrl) }}<label for="{{form.configuration.generateLegendGraphicUrl.vars.id}}" class="labelCheck">{{"Generate get legend graphic url"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.showWmsTitle) }}<label for="{{form.configuration.showWmsTitle.vars.id}}" class="labelCheck">{{"Show WMS title"|trans}}</label>
+    {{ form_widget(form.configuration.showSourceTitle) }}<label for="{{form.configuration.showSourceTitle.vars.id}}" class="labelCheck">{{"Show WMS title"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_widget(form.configuration.showLayerTitle) }}<label for="{{form.configuration.showLayerTitle.vars.id}}" class="labelCheck">{{"Show layer title"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.showGroupedLayerTitle) }}<label for="{{form.configuration.showGroupedLayerTitle.vars.id}}" class="labelCheck">{{"Show grouped layer title"|trans}}</label>
+    {{ form_widget(form.configuration.showGrouppedTitle) }}<label for="{{form.configuration.showGrouppedTitle.vars.id}}" class="labelCheck">{{"Show grouped layer title"|trans}}</label>
     <div class="clearContainer"></div>
 </div>
