--- a/src/Mapbender/ManagerBundle/Resources/views/Element/toc.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/toc.html.twig
@@ -1,11 +1,4 @@
 <div class="elementFormToc elementForm">
-    {{ form_label(form.title) }}{{ form_widget(form.title) }}
-    <div class="clearContainer"></div>
-    {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
-    <div class="clearContainer"></div>
-
-
-
-    {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show label"|trans}}</label>
+    {{ form_rest(form) }}
     <div class="clearContainer"></div>
 </div>
