--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -5,11 +5,11 @@
   <div class="clearContainer"></div>
   <div class="{{region}} region">
     <h3 class="left subTitle">{{ region | capitalize }}</h3>
-    <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconBig right addElement" title="{{'Add new element'|trans}}"></a>
+    <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconBig right addElement" title="{{'Add new element to'|trans}} {{region}}"></a>
     <div class="clearContainer"></div>
     {% if application.getElementsByRegion(region)|length > 0 %}
       <table class="elementsTable tableCore" data-region="{{ region }}">
-        <thead id="permissionsHead">
+        <thead>
           <tr>
             <th>{{ 'Title' | trans }}</th>
             <th class="type">{{ 'Type' | trans }}</th>
@@ -22,11 +22,11 @@
               <td class="description">{{ element.title }}</td>
               <td class="description">{{ element_class_title(element) }}</td>
               <td class="iconColumn">
-                <div class="checkWrapper left iconCheckbox {% if element.enabled %}iconCheckboxActive{% endif %}">
+                <div class="checkWrapper left iconCheckbox {% if element.enabled %}iconCheckboxActive{% endif %}" title="{{"Toggle show/hide element"|trans}}">
                   <input class="checkbox" type="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                 </div>
-                <span class="iconEdit" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
-                <span class="iconRemove" title="{{ element.title }}" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
+                <span class="iconEdit" title="{{"Edit element"|trans}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
+                <span class="iconRemove" title="{{"Delete element"|trans}}" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
               </td>
             </tr>
           {% endfor %}
