--- a/src/Mapbender/ManagerBundle/Resources/views/Element/legend.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/legend.html.twig
@@ -1,17 +1,18 @@
 <div class="elementFormLegend elementForm">
+    <div class="left">
+        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
+    </div>
+    {{ form_widget(form.configuration.hideEmptyLayers) }}<label for="{{form.configuration.hideEmptyLayers.vars.id}}" class="labelCheck">{{"Hide empty layers"|trans}}</label>
+    <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.elementType) }}{{ form_widget(form.configuration.elementType) }}
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
-    <div class="clearContainer"></div>
     {{ form_label(form.configuration.displayType) }}{{ form_widget(form.configuration.displayType) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
-    <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.hideEmptyLayers) }}<label for="{{form.configuration.hideEmptyLayers.vars.id}}" class="labelCheck">{{"Hide empty layers"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.noLegend) }}{{ form_widget(form.configuration.noLegend) }}
     <div class="clearContainer"></div>
