add icon dropdown to button element formular

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/button.html.twig
@@ -6,6 +6,9 @@
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
 
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.icon) }}{{ form_widget(form.configuration.icon) }}
+
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
 
     <div class="clearContainer"></div>
