--- a/src/Mapbender/ManagerBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/button.html.twig
@@ -1,16 +1,13 @@
 <div class="elementFormButton elementForm">
-    {{ form_label(form.title) }}{{ form_widget(form.title) }}
     {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show button label"|trans}}</label>
-
+    <div class="clearContainer"></div>
+    {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
-
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.icon) }}{{ form_widget(form.configuration.icon) }}
-
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
-
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.click) }}{{ form_widget(form.configuration.click) }}
     <div class="clearContainer"></div>
