--- a/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
@@ -1,6 +1,7 @@
 <div class="elementFormGps elementForm">
-    {{ form_label(form.title) }}{{ form_widget(form.title) }}
     {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show button label"|trans}}</label>
+    <div class="clearContainer"></div>
+    {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
