--- a/src/Mapbender/ManagerBundle/Resources/views/Application/list-source.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/list-source.html.twig
@@ -7,7 +7,7 @@
       <span>{{ source.type }}</span>
       <span class="subTitle">{{ source.title }}</span>
       <span>{{ source.alias }}</span>
-      <span class="checkedIcon"></span>
+      <span class="iconOk iconBig"></span>
       <div class="description">{{ source.description | trans }}</div>
       <div class="clearContainer"></div>
     </a>
