--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -28,7 +28,8 @@
                 <td class="iconColumn">
                   <span class="iconPublish iconSmall enabled"><input data-href="{{ path('mapbender_manager_repository_instanceenabled', {'slug': application.slug,'layersetId': layerset.id, 'instanceId': instance.id})}}" data-id="{{ instance.id }}" type="checkbox" {% if instance.enabled %} checked="checked" {% endif %} /></span>
                   <a class="iconEdit iconSmall" href="{{ url("mapbender_manager_repository_instance",{"slug": application.slug, "instanceId": instance.id})  }}" class="btn">{{ 'Edit Source Instance' | trans }}</a>
-                  <a class="iconRemove iconSmall" href="{{ url("mapbender_manager_application_confirmdeleteinstance",{"slug": application.slug, 'layersetId': layerset.id, "instanceId": instance.id}) }}" class="btn btn-warning">{{ 'Delete' | trans }}</a>
+
+                  <span class="iconRemove iconSmall" title="{{ instance.title }}" data-id="{{ layerset.id }}" data-slug="{{ application.slug }}" data-url="{{ url("mapbender_manager_application_deleteinstance",{"slug": application.slug, 'layersetId': layerset.id, "instanceId": instance.id}) }}"></span>
                 </td>
               </tr>
             {% endfor %}
