bugfixes, designfixes, remove old css, add markup for design

--- a/src/Mapbender/CoreBundle/Resources/views/Element/activityindicator.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/activityindicator.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-activityindicator" title="{{ configuration.tooltip|default(title)|trans }}"></div>
+<span id="{{ id }}" class="mb-element mb-element-activityindicator iconActivity iconBig" title="{{ configuration.tooltip|default(title)|trans }}"></span>
