--- a/src/Mapbender/ManagerBundle/Resources/views/Element/activityindicator.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/activityindicator.html.twig
@@ -3,4 +3,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.activityClass) }}{{ form_widget(form.configuration.activityClass) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.ajaxActivityClass) }}{{ form_widget(form.configuration.ajaxActivityClass) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.tileActivityClass) }}{{ form_widget(form.configuration.tileActivityClass) }}
+    <div class="clearContainer"></div>
 </div>
