--- a/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
@@ -1,10 +1,9 @@
-<div id="{{ id }}" class="mb-element mb-element-copyright"  title="{{ configuration.tooltip|default(title)|trans }}">
-    <span class="span-copyright" title="">{{ configuration.copyright_text |trans |raw }}</span>
+<span id="{{ id }}" class="mb-element mb-element-copyright {% if configuration.anchor is defined %} {{configuration.anchor}} {% endif %}"  title="{{ configuration.tooltip|default(title)|trans }}">
+    <span class="smallText span-copyright" title="">{{ configuration.copyright_text |trans |raw }}</span>
     {% if configuration.dialog_link is defined and configuration.dialog_link != ''%}
-    <br/>
-    <span id="{{ id }}-link" class="mb-element-copyright-link">{{ configuration.dialog_link |trans |raw }}</span>
+    <span id="{{ id }}-link" class="smallText mb-element-copyright-link">{{ configuration.dialog_link |trans |raw }}</span>
     <div id="{{ id }}-dialog" class="mb-element-copyright-dialog" title="{{ configuration.dialog_title |trans |raw }}">
         <p>{{ configuration.dialog_content |trans |raw }}</p>
     </div>
     {% endif %}
-</div>
+</span>
