--- a/src/Mapbender/ManagerBundle/Resources/views/Element/coordinatesdisplay.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/coordinatesdisplay.html.twig
@@ -5,8 +5,16 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.anchor) }}{{ form_widget(form.configuration.anchor) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.numDigits) }}{{ form_widget(form.configuration.numDigits) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.empty) }}{{ form_widget(form.configuration.empty) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.prefix) }}{{ form_widget(form.configuration.prefix) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.separator) }}{{ form_widget(form.configuration.separator) }}
     <div class="clearContainer"></div>
 </div>
