add Print Client lement description, add a form title input for the yaml form

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
@@ -3,6 +3,7 @@
       {% trans with {'%locale%': app.request.locale} %}
       Use the <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.{% endtrans %}
     </div>
-    {{ form_label(form.configuration) }}
-    {{ form_widget(form.configuration) }}
+    {{ form_label(form.title) }}{{ form_widget(form.title) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration) }}{{ form_widget(form.configuration) }}
 </div>
