--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -33,7 +33,7 @@
         </tbody>
       </table>
     {% else %}
-      <p class="description">No elements added.</p>
+      <p class="description">{{"No elements added."|trans}}</p>
     {% endif %}
   </div>
 {% endfor %}
