--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.layertree.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.layertree.css
@@ -1,12 +1,17 @@
 .mb-element-layertree {
+    position: relative;
     font: normal 10pt sans-serif;
+}
+
+.mb-element-layertree a#delete-all {
+    position: absolute;
+    right: 2px;
 }
 
 .mb-element-layertree li>input[type=checkbox] {
     margin  : 0;
     padding : 0;
 }
-
 
 .mb-element-layertree li.queryable>input[type=checkbox] {
 
@@ -37,22 +42,14 @@
 .mb-element-layertree span.spinner {
     width: 14px;
     height: 14px;
-}
-.mb-element-layertree span.spinner.loading {
     background: url('icons/spinner.gif') no-repeat;
+    visibility: hidden;
 }
 
 .mb-element-layertree span.state {
     width: 14px;
     height: 14px;
-}
-
-.mb-element-layertree span.state.error {
-    background: url('icons/error.png') no-repeat;
-}
-
-.mb-element-layertree span.state.invisible {
-    background: url('icons/invisible.png') 0 2px no-repeat;
+    visibility: hidden;
 }
 
 .mb-element-layertree span.toggleable {
@@ -88,3 +85,18 @@
 .mb-element-layertree span.removebutton {
     font-size: 20px;
 }
+
+.mb-element-layertree li.loading span.spinner {
+    visibility: visible;
+}
+
+.mb-element-layertree li.error span.state {
+    background: url('icons/error.png') no-repeat;
+    visibility: visible;
+}
+
+.mb-element-layertree li.invisible span.state {
+    background: url('icons/invisible.png') 0 2px no-repeat;
+    visibility: visible;
+}
+
