--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.overview.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.overview.css
@@ -1,22 +1,27 @@
-
-
 .mb-element-overview {
+    border: 1px solid #CCC;
     position: absolute;
-    padding-left: 20px;
+    padding-left: 1px;
     z-index: 1009;
-}
-
-.mb-element-overview .handle {
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    background-color: white;
-    background: white url("icons/overview-minimize.png")  no-repeat;
+    cursor: pointer;
 }
 
 .mb-element-overview.inline {
     position: static;
     padding: 0px;
+}
+
+.mb-element-overview .handle {
+    position: absolute;
+    width: 2px;
+    background-color: #CCC;
+}
+
+.mb-element-overview .handle span {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    background:  url("icons/overview-maximize.png") no-repeat;
 }
 
 .mb-element-overview.inline .handle {
@@ -27,42 +32,63 @@
     display: none;
 }
 
-.mb-element-overview.closed .handle {
-    background: white url("icons/overview-maximize.png") no-repeat;
-}
-
-.mb-element-overview.left-top {
-    padding-left: 0px;
-    padding-right: 20px;
-}
-
 .mb-element-overview.left-top .handle {
-    top: 0px;
+    bottom: 0px;
     right: 0px;
+    top: 0px;
 }
 
-.mb-element-overview.left-bottom {
-    padding-left: 0px;
-    padding-right: 20px;
+.mb-element-overview.left-top .handle  span {
+    left: 0px;
+    top: 0px;
+    margin-left: 3px;
 }
 
 .mb-element-overview.left-bottom .handle {
     bottom: 0px;
     right: 0px;
+    top: 0px;
+}
+
+.mb-element-overview.left-bottom .handle  span {
+    left: 0px;
+    bottom: 0px;
+    margin-left: 3px;
 }
 
 .mb-element-overview.right-top .handle {
-    top: 0px;
+    bottom: 0px;
     left: 0px;
+    top: 0px;
+}
+
+.mb-element-overview.right-top .handle  span {
+    left: 0px;
+    top: 0px;
+    margin-left: -19px;
 }
 
 .mb-element-overview.right-bottom .handle {
     bottom: 0px;
     left: 0px;
+    top: 0px;
+}
+
+.mb-element-overview.right-bottom .handle span {
+    left: 0px;
+    bottom: 0px;
+    margin-left: -19px;
 }
 
 #mb-element-overview-map .olControlOverviewMapElement {
     background-color: white;
-    border: 1px solid #888;
-    padding: 2px;
+}
+
+.mb-element-overview div {
+    padding: 0px;
+    margin: 0px;
+}
+
+.mb-element-overview.closed .handle span {
+    background:  url("icons/overview-minimize.png")  no-repeat;
 }
