--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -29,14 +29,14 @@
               <a class="iconEdit iconBig" href="{{ path('mapbender_manager_application_edit',  {'slug': application.slug}) }}#base" title="{{ 'Edit application' | trans }}"></a>
             {% endif %}
 
-            {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
+            {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('EDIT', application) %}
               <a href="#" class="iconPublish iconBig {% if application.published %}enabled iconPublishActive{% else %}disabled{% endif %}" title="{{ 'Publish / Unpublish application' | trans }}" data-application-slug="{{ application.slug }}"></a>
             {% endif %}
 
             {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('DELETE', application) %}
-              <span class="iconRemove iconBig"  
+              <span class="iconRemove iconBig"
                 title="{{ application.title }}"
-                data-url="{{ path('mapbender_manager_application_delete', { 'slug': application.slug}) }}" 
+                data-url="{{ path('mapbender_manager_application_delete', { 'slug': application.slug}) }}"
                 data-slug="{{ application.slug }}"
               ></span>
             {% endif %}
@@ -47,9 +47,7 @@
   </ul>
   <div class="clearContainer"></div>
 {% else %}
-  {% trans %}
-    <span class="description">You don't have any apps defined. Start by creating one now.</span>
-  {% endtrans %}
+    <span class="description">{% trans %}No applications available.{% endtrans %}</span>
 {% endif %}
 <div class="clearContainer"></div>
 
