--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
@@ -28,19 +28,20 @@
           {% endif %}
           <div class="buttonGroup">
             <a class="iconView iconBig" href="{{ url("mapbender_manager_repository_view",{"sourceId":source.id}) }}" title="{{ 'View service metadata' | trans }}"></a>
+            {% if is_granted('DELETE', source) %}
                <span class="iconRemove iconBig"
                 title="{{ source.title }}"
                 data-url="{{ url("mapbender_manager_repository_delete",{"sourceId":source.id}) }}"
                 data-id="{{ source.id }}"></span>
+            {% endif %}
           </div>
         </div>
       </li>
     {% endfor %}
   </ul>
 {% else %}
-  {% trans %}
-    <span class="description">You don't have any services defined. Start by loading one now.</span>
-  {% endtrans %}
+    <span class="description">{% trans %}No services available.{% endtrans %}</span>
+
 {% endif %}
 
 <div class="clearContainer"></div>
