--- a/src/Mapbender/CoreBundle/Resources/views/Element/overview.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/overview.html.twig
@@ -1,4 +1,4 @@
 <div id="{{ id }}" class="mb-element mb-element-overview">
     <div id="mb-element-overview-map"></div>
-    <div class="handle"></div>
+    <div class="iconBig iconExpand toggleOverview"></div>
 </div>
