--- a/src/Mapbender/ManagerBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/button.html.twig
@@ -16,4 +16,5 @@
     {{ form_label(form.configuration.action) }}{{ form_widget(form.configuration.action) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.deactivate) }}{{ form_widget(form.configuration.deactivate) }}
+    <div class="clearContainer"></div>
 </div>
