--- a/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
@@ -48,4 +48,5 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.otherSrs) }}{{ form_widget(form.configuration.otherSrs) }}
     <div class="clearContainer"></div>
+    <div class="clearContainer"></div>
 </div>
