--- a/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
@@ -6,4 +6,5 @@
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration) }}{{ form_widget(form.configuration) }}
+    <div class="clearContainer"></div>
 </div>
