--- a/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
@@ -4,27 +4,6 @@
 
 {% block manager_content %}
 
-<fieldset class="serviceAddBox left box">
-  <legend>{{"OGC WMS"|trans}}</legend>
-    <form action="{{path('mapbender_wms_repository_create')}}" method="post" novalidate="novalidate">
+    {% include 'MapbenderWmsBundle:Repository:form.html.twig' %}
 
-        <label class="left labelInput" for="{{ form.originUrl.get('id') }}">{{"Serviceurl:" | trans}}</label>
-        {{ form_widget(form.originUrl, { 'attr': {'class': 'input'} }) }}
-        <div class="clearContainer"></div>
-
-        <label class="left labelInput" for="{{ form.username.get('id') }}">{{"Username:" | trans}}</label>
-        {{ form_widget(form.username, { 'attr': {'class': 'input'} }) }}
-        <div class="clearContainer"></div>
-
-        <label class="left labelInput" for="{{ form.password.get('id') }}">{{"Password:" | trans}}</label>
-        {{ form_widget(form.password, { 'attr': {'class': 'input'} }) }}
-        <div class="clearContainer"></div>
-
-        {{form_rest(form)}}
-        <div class="right">
-            <input class="button" type="submit" name="load" value="{{"Load"|trans}}" />
-            <a href="{{path('mapbender_manager_repository_index')}}" class="button critical">Cancel</a>
-        </div>
-    </form>
-</fieldset>
 {% endblock %}
