printclient IE Fix

--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -28,7 +28,10 @@
                 <label class="printlabel" for="rotation">{{ 'Rotation' | trans }}</label>
                 <input type="text" name="rotation" size="3"/>
             </div>      
-            <br>    
+            <br>
+            <div id="slider">dc</div>
+            <br>
+            <br>
             <div id="extra_fields">
             </div>
             <br>
