--- a/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
@@ -1,6 +1,8 @@
-<div id="{{ id }}" class="mb-element mb-element-srsselector">
+<div id="{{ id }}" class="mb-element mb-element-srsselector dropdown">
 {% if configuration.label == true %}
     <label for="srsselector">{{ title|trans }}:</label>
 {% endif %}
-    <select id="srsselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+    <select class="hiddenDropdown" id="srsselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+    <div class="dropdownValue iconDown"></div>
+    <ul class="dropdownList"></ul>
 </div>
