add a lots of markup for design and do some bugfixes

--- a/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog_content.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog_content.html.twig
@@ -1,3 +1,2 @@
-<p>{{ fom.server_name }}, {{ fom.server_version }}</p>
-<hr/>
-<p>Learn more about Mapbender3 at our <a href="http://mapbender3.org">website</a>.</p>
+<p class="subTitle">{{ fom.server_name }} {{"v."|trans}}{{ fom.server_version }}<p/>
+<p class="description">{{"Learn more about Mapbender3 at our"|trans}} <a class="linkButton" href="http://mapbender3.org" target="_blank" title="{{"Visit the official website."}}">{{"website"|trans}}</a>.</p>
