--- a/src/Mapbender/CoreBundle/Resources/views/Element/scalebar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scalebar.html.twig
@@ -1,1 +1,3 @@
-<div id="{{ id }}" class="mb-element mb-element-scaleline"></div>
+<div id="{{ id }}" class="mb-element mb-element-scaleline smallText">
+  <div class="scaleBorder"></div>
+</div>
