--- a/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/scaleselector.html.twig
@@ -1,6 +1,8 @@
-<div id="{{ id }}" class="mb-element mb-element-scaleselector">
 {% if configuration.label == true %}
-    <label for="scaleselector">{{ title|trans }}</label>
+  <span class="labelInput">{{ title|trans }}</span>
 {% endif %}
-    <select id="scaleselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+<div id="{{ id }}" class="mb-element mb-element-scaleselector dropdown">
+  <select class="hiddenDropdown" id="scaleselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+  <div class="dropdownValue iconDown"></div>
+  <ul class="dropdownList"></ul>
 </div>
