--- a/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
@@ -1,8 +1,8 @@
-<div id="{{ id }}" class="mb-element mb-element-srsselector dropdown">
 {% if configuration.label == true %}
-    <label for="srsselector">{{ title|trans }}:</label>
+  <span class="labelInput">{{ title|trans }}</span>
 {% endif %}
-    <select class="hiddenDropdown" id="srsselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
-    <div class="dropdownValue iconDown"></div>
-    <ul class="dropdownList"></ul>
+<div id="{{ id }}" class="mb-element mb-element-srsselector dropdown">
+  <select class="hiddenDropdown" id="srsselector" title="{{ configuration.tooltip|default(title)|trans }}"></select>
+  <div class="dropdownValue iconDown"></div>
+  <ul class="dropdownList"></ul>
 </div>
