--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -5,14 +5,15 @@
   <div class="clearContainer"></div>
   <div class="{{region}} region">
     <h3 class="left subTitle">{{ region | capitalize }}</h3>
-    <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconBig right addElement" title="{{'Add new element to'|trans}} {{region}}"></a>
     <div class="clearContainer"></div>
       <table class="elementsTable tableCore" data-region="{{ region }}">
         <thead>
           <tr>
             <th>{{ 'Title' | trans }}</th>
             <th class="type">{{ 'Type' | trans }}</th>
-            <th></th>
+            <th class="iconColumn">
+              <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconSmall addElement" title="{{'Add new element to'|trans}} {{region}}"></a>
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -23,10 +24,10 @@
                 <td class="typeColumn description">{{ element_class_title(element) }}</td>
                 <td class="iconColumn">
                   <div class="checkWrapper left iconCheckbox {% if element.enabled %}iconCheckboxActive{% endif %}" title="{{"Toggle show/hide element"|trans}}">
-                    <input class="checkbox" type="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
+                    <input class="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                   </div>
-                  <span class="iconEdit editElement" title="{{"Edit element"|trans}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span
-  >                <span class="iconRemove removeElement" title="{{"Delete element"|trans}}" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
+                  <span class="iconEdit editElement" title="{{"Edit element"|trans}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
+                  <span class="iconRemove removeElement" title="{{"Delete element"|trans}}" data-id="{{ element.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
                 </td>
               </tr>
             {% endfor %}
