--- a/src/Mapbender/ManagerBundle/Resources/views/Element/scaleselector.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/scaleselector.html.twig
@@ -5,4 +5,6 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
+    <div class="clearContainer"></div>
 </div>
