--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/index.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/index.html.twig
@@ -11,10 +11,10 @@
     {% for entity in entities %}
         <tr>
             <td class="id">{{ entity.id }}</td>
-            <td><a class="edit" href="{#{ path('wmc_edit', { 'id': entity.id }) }#}">{{ entity.state.title }}</a></td>
+            <td><a class="edit" href="#" data-id="{{ entity.id }}">{{ entity.state.title }}</a></td>
             <td>{{ entity.abstract }}</td>
             <td>
-                <a class="delete"  href="{#{ path('wmc_delete', { 'id': entity.id }) }#}">{{'Delete'|trans }}</a>
+                <a class="delete" href="#" data-id="{{ entity.id }}">{{'Delete'|trans }}</a>
             </td>
         </tr>
     {% endfor %}
