show header added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,5 +1,5 @@
 <div id="{{ id }}" class="mb-element mb-element-layertree">
-    {% if configuration.showCaption %}
+    {% if configuration.showHeader %}
     <h2>{{ 'Sources' | trans }} (<span id="counter">0</span>)<a href="#" id="delete-all" class="icononly" title="Delete all Sources">&times;</a></h2>
     {% endif %}
     <ul id="list-root" class="layers" ></ul>
