--- a/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-featureinfo" title="{{ configuration.tooltip|default(title)|trans }}"></div>
+<div id="{{ id }}" class="mb-element mb-element-featureinfo XXX" title="{{ configuration.tooltip|default(title)|trans }}"></div>
